# Cortex-Desktop-Assistant

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  ROADMAP.md  chatterbox_tts_module.py  config.yaml.example  config_utils.py  edge_tts_module.py  google_tts_module.py  groq_engine.py  logger.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_tts.py  web_search.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Cortex root folder/: chatterbox_tts_module.py  edge_tts_module.py  google_tts_module.py
Cortex root folder/tests/: test_tts.py
cortex/: __init__.py
tests/: test_config.py  test_logger.py  test_tts.py
